--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "conventional-changelog": "^3.1.23",
+    "conventional-changelog-cli": "^2.1.0",
     "cz-conventional-changelog": "^3.3.0",
     "husky": "^4.3.0"
   },
@@ -32,6 +34,6 @@
   "husky": {
     "hooks": {
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
-    }  
-  }  
+    }
+  }
 }
